name: portfolio
version: 0.1.0.0
copyright: 2020, KiJeong-Lim
license: BSD3
license-file: LICENSE
author: KiJeong-Lim
build-type: Simple
cabal-version: >= 1.10
library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, QuickCheck >= 2.13, checkers >= 0.5, pretty-terminal >= 0.1.0.0
    exposed-modules:
        Lib.Algorithm.Sorting
        Lib.Base
        Lib.Text.PC
        Lib.Text.PC.Expansion
        Lib.Text.Ppr
    other-modules:
        Lib.Text.PC.Base
        Lib.Text.PC.Check
        Lib.Text.PC.Loc
        Lib.Text.PC.Regex
        Lib.Text.Ppr.Viewer
executable LGS
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, QuickCheck >= 2.13, checkers >= 0.5, pretty-terminal >= 0.1.0.0
    main-is: LGS/Main.hs
    other-modules:
        LGS.Make
        LGS.Read
        LGS.Show
        LGS.Util
        Lib.Algorithm.Sorting
        Lib.Base
        Lib.Text.PC
        Lib.Text.PC.Base
        Lib.Text.PC.Check
        Lib.Text.PC.Expansion
        Lib.Text.PC.Loc
        Lib.Text.PC.Regex
        Lib.Text.Ppr
        Lib.Text.Ppr.Viewer
executable PGS
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, QuickCheck >= 2.13, checkers >= 0.5, pretty-terminal >= 0.1.0.0
    main-is: PGS/Main.hs
    other-modules:
        Lib.Algorithm.Sorting
        Lib.Base
        Lib.Text.PC
        Lib.Text.PC.Base
        Lib.Text.PC.Check
        Lib.Text.PC.Expansion
        Lib.Text.PC.Loc
        Lib.Text.PC.Regex
        Lib.Text.Ppr
        Lib.Text.Ppr.Viewer
        PGS.Make
        PGS.Read
        PGS.Show
        PGS.Util
executable Aladdin
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, QuickCheck >= 2.13, checkers >= 0.5, pretty-terminal >= 0.1.0.0
    main-is: Aladdin/Main.hs
    other-modules:
        Aladdin.Back.BackEnd
        Aladdin.Back.Base.Constant
        Aladdin.Back.Base.Labeling
        Aladdin.Back.Base.TermNode
        Aladdin.Back.Base.TermNode.Read
        Aladdin.Back.Base.TermNode.Show
        Aladdin.Back.Base.TermNode.Util
        Aladdin.Back.Base.VarBinding
        Aladdin.Back.Converter.Main
        Aladdin.Back.Converter.Scheme
        Aladdin.Back.Converter.Util
        Aladdin.Back.HOPU.Bind
        Aladdin.Back.HOPU.Main
        Aladdin.Back.HOPU.MkSubst
        Aladdin.Back.HOPU.Select
        Aladdin.Back.HOPU.Simplify
        Aladdin.Back.HOPU.Util
        Aladdin.Front.Analyzer.Grammar
        Aladdin.Front.Analyzer.Lexer
        Aladdin.Front.Analyzer.Main
        Aladdin.Front.Analyzer.Parser
        Aladdin.Front.Desugarer.ForKind
        Aladdin.Front.Desugarer.ForTerm
        Aladdin.Front.Desugarer.ForType
        Aladdin.Front.Desugarer.Main
        Aladdin.Front.Header
        Aladdin.Front.TypeChecker.Main
        Aladdin.Front.TypeChecker.Util
        Lib.Base
executable Butterfly
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, QuickCheck >= 2.13, checkers >= 0.5, pretty-terminal >= 0.1.0.0
    main-is: Butterfly/Main.hs
    other-modules:
        Lib.Base
